	- resurrect --specedit for i18n.
	- fix: 4 memory leaks eliminated.
	- fix: yet another segfault from bad metadata prevented.
	- add sha1 test vectors, verify on ix86/alpha/sparc.
	- add (but disable for now) rpm-perl subpackage from Perl-RPM.
	- python: parameterize with PYVER to handle 1.5 and/or 2.1 builds.
	- add build dependency on zlib-devel (#49575).
	- enable rpm-perl subpackage.

4.0 -> 4.0.2
	- fix: avoid calling getpass twice as side effect of xstrdup macro
	  (katzj@linuxpower.org) (#17672).
	- order packages using tsort, clipping Requires:'s in dependency loops.
	- handle possible db3 dependency on -lpthread more gracefully.
	- bump popt version to 1.6.1.
	- fix: more (possible) xstrdup side effects.
	- fix: rpm2cpio error check wrong on non-libio platforms.
	- fix: runTriggers was not adding countCorrection.
	- add rpmGetRpmlibProvides() to retrieve rpmlib(...) provides
	  "Pawel A. Gajda" <mis@k2.net.pl>.
	- syntax to specify source of Requires: (PreReq: now legacy).
	- rip out rpm{get,put}text, use getpo.sh and specspo instead.
	- fine-grained Requires, remove install PreReq's from Requires db.
	- fix: duplicate headerFree() on instalBinaryPackage() error return.
	- fix: work around for (mis-compilation?!) segfaults on signature paths.
	- fix: segfault on exit of "rpm -qp --qf '%{#fsnames}' pkg" (#20595).
	- hpux w/o -D_OPEN_SOURCE has not h_errno.
	- verify MD5 sums of payload files when unpacking archive.
	- hide libio lossage in prototype, not API.
	- add support for SHA1 as well as MD5 message digests.
	- don't verify src rpm MD5 sums (yet).
	- md5 sums are little endian (no swap) so big endian needs the swap.
	- add doxygen and lclint annotations most everywhere.
	- consistent return for all signature verification.
	- use enums for almost all rpmlib #define's.
	- API: change rpmProblem typedef to pass by reference, not value.
	- unify rpmError and rpmMessge interfaces through rpmlog.